# oscada

./: INSTALL.debian  configure.ac
src/moduls/daq/EthernetIP/: Makefile.am  ethernet_ip_daq.cpp  ethernet_ip_daq.h  moduls.cpp
